--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "typescript": "3.7.3",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10"
+  },
+  "dependencies": {
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.3"
   }
 }
