--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "types": ["@types/chrome", "node"],
     "typeRoots": ["node_modules/@types"],
     "moduleResolution": "node",
-    "lib": ["es2017", "dom"]
+    "lib": ["es2017", "dom"],
+    "resolveJsonModule": true
   },
   "include": ["./src/*"]
 }
